# 2D-Parallax-Maps-Editor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Assets/Data/: ED.json
Assets/GLSL/Static/: background.frag  background.vert
Example Projects/Example - 1/: proj.json
src/: Window.cpp  Window.h  main.cpp
src/Core/Events/: EditorLoadSystem.h  EventsSystem.h
src/Core/GL/: Shader.cpp  Shader.h
src/Core/Graphics/: AssetsManager.cpp  AssetsManager.h  RendererSystem.cpp  RendererSystem.h
src/Core/Graphics/Re/: LoadingBar.cpp  LoadingBar.h
src/Menus/: MenusManager.cpp  MenusManager.h
src/UIMenus/: MenusManager.cpp  MenusManager.h  StartMenu.cpp  StartMenu.h
src/UIMenus/HPP/: MenusManager.h  StartMenu.h
